# python-tinylink

./: .flake8  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  LICENSE.md  README.md  pyproject.toml  setup.py
.github/workflows/: lint.yml  test.yml
docs/: statechart.dot
tests/: test_tinylink.py
tinylink/: __init__.py  cli.py  consts.py  link.py  tinylink.py  types.py  utils.py
