[tool.black]
exclude = '''
(
    \.git/
  | \.vscode/
  | env/
)
'''
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["Bas Stottelaar <basstottelaar@gmail.com>"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Embedded Systems",
]
description = "Frame-based streaming protocol for embedded applications."
homepage = "https://github.com/basilfx/python-tinylink"
include = [
    "LICENSE.md",
]
keywords = ["python", "embedded", "tinylink", "streaming", "serial"]
license = "MIT"
name = "tinylink"
packages = [
    { include = "tinylink" }
]
readme = "README.md"
repository = "https://github.com/basilfx/python-tinylink"
version = "2.0.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-mypy = "^17.8.0"
pytest = "^7.3.1"

[tool.poetry.scripts]
tinylink = 'tinylink.cli:run'

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
