[tool.black]
exclude = '''
(
    \.git/
  | \.vscode/
  | env/
)
'''
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["Bas Stottelaar <basstottelaar@gmail.com>"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Embedded Systems",
]
description = "Frame-based streaming protocol for embedded applications."
homepage = "https://github.com/basilfx/python-tinylink"
include = [
    "LICENSE.md",
]
keywords = ["python", "embedded", "tinylink", "streaming", "serial"]
license = "MIT"
name = "tinylink"
packages = [
    { include = "tinylink" }
]
readme = "README.md"
repository = "https://github.com/basilfx/python-tinylink"
version = "2.0.0"

[tool.poetry.dependencies]
prompt-toolkit = { version = "^3.0.50", optional = true }
pyserial-asyncio = { version = "^0.6", optional = true }
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^25.0.0"
flake8 = "^7.1.0"
isort = "^6.0.0"
pytest = "^8.3.0"
mypy = "^1.15.0"

[tool.poetry.extras]
cli = ["pyserial-asyncio", "prompt-toolkit"]

[tool.poetry.scripts]
tinylink = 'tinylink.cli:run'

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
